<resources>
    <string name="app_name">CompileOrCry</string>
    <string name="title_feed">Feed</string>
    <string name="title_new">New</string>
    <string name="title_profile">Profile</string>
    <string name="button_save_mood">Save Mood</string>
    <string name="timestamp">Timestamp</string>
    <string name="emotional_state">Emotional State</string>
    <string name="emotional_state_required">Emotional State *</string>
    <string name="social_situation">Social Situation</string>
    <string name="title_registration">Registration</string>
    <string name="title_login">Login</string>
    <string name="login_header">Moody</string>
    <string name="registration_header">Let\'s Get\nStarted</string>
    <string name="registration_username">Username</string>
    <string name="registration_name">Name</string>
    <string name="registration_back">Back</string>
    <string name="registration_done">Done</string>
    <string name="profile_editname">Edit Name</string>
    <string name="name_required">Name is required.</string>
    <string name="username_required">Username is required.</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="moody_logo">Moody Logo</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="new_event">New Event</string>
    <string name="date_amp_time_required"><![CDATA[Date & Time *]]></string>
    <string name="create">Create</string>
    <string name="back">Back</string>
    <string name="profile_image">Profile Image</string>
    <string name="username_placeholder">\@username</string>
    <string name="edit">Edit</string>
    <string name="friends">Friends</string>
    <string name="history">History</string>
    <string name="requests">Requests</string>
    <string name="logout">Logout</string>
    <string name="button_follow">Follow</string>
    <string name="button_requested">Requested</string>
    <string name="button_unfollow">Unfollow</string>
    <string name="sort_prompt">Sort</string>
    <string name="filter_prompt">Filter</string>
    <string name="add_friends">Add Friends</string>
    <string name="view_map">View Map</string>
    <string name="exit_map">Exit Map</string>
    <string name="edit_mood">Edit Mood Event</string>
    <string name="view_mood">View Mood Event</string>
    <string name="button_delete">Delete</string>
    <string name="text_private">Private</string>
    <string name="text_formatted_public">"Public  "</string>
    <string name="location">Location</string>
    <string name="current_location">Current location</string>
    <string name="search_for_users">Search for users...</string>
    <string name="error_loading_user">Error Loading User</string>
    <string name="save">SAVE</string>
    <string name="cancel">Cancel</string>
    <string name="edit_your_name">Edit Your Name</string>
    <string name="qr_code">QR Code</string>
    <string name="dismiss">Dismiss</string>
    <string name="friends_can_scan_this_to_follow_you">Friends can scan this to follow you!</string>
    <string name="reason">Reason</string>
    <string name="no_pending_friend_requests">No pending friend requests</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="view_comments">View Comments</string>
    <string name="comment_text">Comment Text</string>
    <string name="write_a_comment">Write a comment...</string>
</resources>