<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_feed">

    <fragment
        android:id="@+id/navigation_feed"
        android:name="ca.ualberta.compileorcry.ui.feed.FeedFragment"
        android:label="@string/title_feed"
        tools:layout="@layout/fragment_feed" />

    <fragment
        android:id="@+id/navigation_new"
        android:name="ca.ualberta.compileorcry.ui.add.NewFragment"
        android:label="@string/title_new"
        tools:layout="@layout/fragment_new" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="ca.ualberta.compileorcry.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_registration"
        android:name="ca.ualberta.compileorcry.ui.registration.RegistrationFragment"
        android:label="@string/title_registration"
        tools:layout="@layout/fragment_registration" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="ca.ualberta.compileorcry.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="ca.ualberta.compileorcry.ui.map.MapFragment"
        android:label="Google Map">
    </fragment>

</navigation>